# restful_api_gateway

./: .env.sample  .gitignore  .pre-commit-config.yaml  README.md  app.py  package.json  pyproject.toml  requirements.txt  setup.py  tasks.py
api/: Dockerfile  main.py  requirements.txt
api/v1/: routers.py
api/v1/endpoints/: prices.py  trading.py  welcome.py
dbg_pds_data_pipeline_practice/: dbg_pds_data_pipeline_practice_stack.py  restful_api_gateway_stack.py
lambda/: test.py
restful_api_gateway/: restful_api_gateway_stack.py
tests/unit/: test_dbg_pds_data_pipeline_practice_stack.py  test_restful_api_gateway_stack.py
