[tool.poetry]
name = "dbg-pds-data-pipeline-practice"
version = "0.1.0"
description = ""
authors = ["Blake Enyart <blake.enyart@nutrien.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
