[tool.poetry]
name = "dbg-pds-data-pipeline-practice"
version = "0.1.0"
description = ""
authors = ["Blake Enyart <blake.enyart@nutrien.com>"]

[tool.poetry.dependencies]
python = "^3.9"
"aws-cdk.aws-s3" = "1.76.0"
"aws-cdk.aws-ec2" = "1.76"
fastapi = "^0.62.0"
"aws-cdk.aws-lambda" = "^1.76.0"
"aws-cdk.aws-apigatewayv2-integrations" = "^1.76.0"
"aws-cdk.aws-apigateway" = "^1.76.0"
"aws-cdk.aws-sns" = "^1.76.0"
"aws-cdk.aws-sns-subscriptions" = "^1.76.0"
"aws-cdk.aws-lambda-event-sources" = "^1.76.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
